oscen-macros/tests/ui/mixed_rates.stderr
error: v1 does not support connections between two differently-rated non-default-rate nodes; route through an outer-rate node instead
  --> tests/ui/mixed_rates.rs:3:1
   |
 3 | / graph! {
 4 | |     name: BadMix;
 5 | |     output stream out;
 6 | |     nodes {
...  |
14 | | }
   | |_^
   |
   = note: this error originates in the macro `graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `PolyBlepOscillator` and `TptFilter`
 --> tests/ui/mixed_rates.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator, TptFilter};
  |                    ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
